# auto-dave

./: .gitignore  README.md  SPEC.md  pytest.ini
.claude/: CLAUDE.md  settings.json
.design-sync/: NOTES.md  config.json  conventions.md
app/: UI-GUIDE.md  brand-electron.cjs  ds-entry.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
backend/: pyproject.toml
backend/autodave/: __init__.py  api.py  cli.py  drafting.py  engine.py  execdb.py  executor.py  harness.py  imports_check.py  installer.py  keychain.py  main.py  notify.py  packages.py  paths.py  runner.py  schedule.py  scheduler.py  service.py  slugs.py  storage.py  testexec.py  testrun.py  timefmt.py  yamlio.py
backend/autodave/instructions/: default-build-instructions.md  framework-instructions.md
backend/autowright/: __init__.py  api.py  cli.py  drafting.py  engine.py  events.py  execdb.py  executor.py  harness.py  imports_check.py  installer.py  keychain.py  main.py  packages.py  paths.py  schedule.py  scheduler.py  service.py  specmd.py  storage.py  testexec.py  transfer.py  yamlio.py
backend/autowright/instructions/: default-build-instructions.md  framework-instructions.md
design/: Auto Dave.dc.html  Autowright.dc.html  README.md  support.js
scripts/: build.sh  clean.sh  commit.sh  dev.sh  gen_app_icon.cjs  gen_tray_icon.py  knowledge.sh  logs.sh  prod.sh
tests/: conftest.py  seed_data.py  test_api.py  test_cli.py  test_drafting.py  test_engine.py  test_events.py  test_execdb.py  test_executor.py  test_harness.py  (+8 more)
(+69 files in other folders)
