[project]
name = "autodave"
version = "0.1.0"
description = "Auto Dave backend — local automation service, engine, and CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",  # uvicorn's WS implementation — plain uvicorn rejects upgrades without it
    "PyYAML>=6.0",
    "keyring>=25.0",
    # Curated step packages (§6.2) — ship inside the bundled interpreter.
    "requests>=2.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
autodave = "autodave.cli:main"
autodave-backend = "autodave.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autodave*"]

[tool.setuptools.package-data]
autodave = ["instructions/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
